rename to vector

--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>point tests</title>
+    <title>vector tests</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="mocha/mocha.css" />
     <script src="mocha/mocha.js"></script>
@@ -14,7 +14,7 @@
   <body>
     <div id="mocha"></div>
     <script src="../build/build.js"></script>
-    <script src="point.js"></script>
+    <script src="vector.js"></script>
     <script>
       mocha.run();
     </script>
